# lopala

./: Cargo.toml  LICENSE  README.md  build.rs  build.sh  install.sh  todo.md  ui.html
.github/workflows/: release.yml
assets/: recording.webm
src/: embed.rs  files.rs  io.rs  main.rs  pty.rs  screencast.rs  screenshot.rs  search.rs  server.rs  state.rs  system.rs  tunnel.rs  update.rs  upload.rs  ws.rs
ui/: astro.config.mjs  package.json
ui/src/: App.vue  env.d.ts  types.ts
ui/src/components/: DesktopWidgets.vue  Dock.vue  MenuBar.vue  Notifications.vue  RemoteCursors.vue  SpotlightSearch.vue  WindowFrame.vue
ui/src/components/apps/: CanvasApp.vue  CodeEditorApp.vue  FileUploader.vue  FilesApp.vue  HelpApp.vue  MediaViewerApp.vue  MessagesApp.vue  ScreenViewApp.vue  ScreenshotApp.vue  TaskmanagerApp.vue  TerminalApp.vue
ui/src/composables/: useCanvas.ts  useFiles.ts  useNotifications.ts  useScreenshot.ts  useTerminals.ts  useWindows.ts  useWs.ts
ui/src/pages/: index.astro
ui/src/styles/: global.css
