[package]
name = "lopala"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "fs", "process", "signal"] }
tower-http = { version = "0.5", default-features = false, features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = { version = "8.0", features = ["axum"] }
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.27", features = ["term", "process", "signal", "fs"] }
libc = "0.2"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1.0"
url = "2.5"
mime_guess = "2.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.8", features = ["v4"] }

[build-dependencies]
anyhow = "1.0"

[profile.release]
opt-level = "z"   # or "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true